--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<div id="demo"></div>
 
 <script>
 window.checkDevice = function(event) {
