--- a/index.html
+++ b/index.html
@@ -1,40 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>KINA.STUDIO Foto & Film</h1>
 
-<div id="demo"></div>
-
-<script>
-window.checkDevice = function(event) {
-  var resolution = [screen.width, screen.height, window.innerWidth, window.innerHeight];
-  var agent = [navigator.appCodeName, navigator.appName, navigator.platform, navigator.userAgent];
-  document.getElementById("demo").innerHTML = '<p>Event: ' + event.type + '</p>';
-  document.getElementById("demo").innerHTML += '<p>ScrW: ' + screen.width + '</p>';
-  document.getElementById("demo").innerHTML += '<p>ScrH: ' + screen.height + '</p>';
-  document.getElementById("demo").innerHTML += '<p>InnW: ' + window.innerWidth + '</p>';
-  document.getElementById("demo").innerHTML += '<p>InnH: ' + window.innerHeight + '</p>';
-  document.getElementById("demo").innerHTML += '<p>Orie: ' + window.orientation + '</p>';
-  
-  document.getElementById("demo").innerHTML += '<p>NavCodeName: ' + navigator.appCodeName + '</p>';
-  document.getElementById("demo").innerHTML += '<p>NavAppName: ' + navigator.appName + '</p>';
-  document.getElementById("demo").innerHTML += '<p>NavPlatform: ' + navigator.platform + '</p>';
-  document.getElementById("demo").innerHTML += '<p>NavUserAgent: ' + navigator.userAgent + '</p>';
-  
-}
-
-document.addEventListener("mousemove", function(event) {
-  window.checkDevice(event);
-});
-
-document.addEventListener("touchmove", function(event) {
-  window.checkDevice(event);
-});
-
-window.addEventListener("orientationchange", function() {
-  window.checkDevice(event);
-}, false);
-
-</script>
 </body>
 </html>
