--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
+  <head>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  </head>
+<body style="font-family: 'Montserrat', sans-serif;">
 <h1>KINA.STUDIO Foto & Film</h1>
 
 </body>
