--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
-<body style="font-family: 'Montserrat', sans-serif;">
-<h1>KINA.STUDIO Foto & Film</h1>
+<body style="background-color:#000; font-family: 'Montserrat', sans-serif;">
 
+  <img src="images/kinastudio_page1.jpg"/>
+  <img src="images/kinastudio_page2.jpg"/>
+
+  <p>&copy; 2016 KINASTUDIO. Stuttgart City.</p>
+  
 </body>
 </html>
