--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
+  <style>
+    p {
+      color:#fff;
+    }
+    body {
+      width:100%;
+      text-align:center;
+    }
+    img {
+      width:100%;
+      max-width:960px;
+    }
+  </style>
 <body style="background-color:#000; font-family: 'Montserrat', sans-serif;">
 
   <img src="images/kinastudio_page1.jpg"/>
