--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
   </style>
 <body style="background-color:#000; font-family: 'Montserrat', sans-serif;">
 
-  <img src="images/kinastudio_page1.jpg"/>
-  <img src="images/kinastudio_page2.jpg"/>
+  <img src="images/kinastudio_web_header.jpg"/>
+  <iframe src="https://player.vimeo.com/video/83231626?byline=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <img src="images/kinastudio_web_info.jpg"/>
 
   <p>&copy; 2016 KINASTUDIO. Stuttgart City.</p>
   
