--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       text-align:center;
     }
     img {
-      width:100%;
-      max-width:960px;
+      width: 100%;
+      max-width: 620px;
+      min-width: 360px;
     }
   </style>
 <body style="background-color:#000; font-family: 'Montserrat', sans-serif;">
