--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             /* size of bullet elment */
             width: 16px;
             height: 16px;
-            background: url('slider/img/b05.png') no-repeat;
+            background: url('slider/images/b05.png') no-repeat;
             overflow: hidden;
             cursor: pointer;
         }
@@ -102,7 +102,7 @@
             width: 40px;
             height: 58px;
             cursor: pointer;
-            background: url('slider/img/a22.png') center center no-repeat;
+            background: url('slider/images/a22.png') center center no-repeat;
             overflow: hidden;
         }
         .jssora22l { background-position: -10px -31px; }
@@ -125,18 +125,22 @@
 
   <img src="images/kinastudio_web_header.jpg"/>
   
+  
+  
+  
+  
       <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden; visibility: hidden;">
         <!-- Loading Screen -->
         <div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
             <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;"></div>
-            <div style="position:absolute;display:block;background:url('img/loading.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
+            <div style="position:absolute;display:block;background:url('slider/images/loading.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
         </div>
         <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden;">
             <div data-p="225.00" style="display: none;">
-                <img data-u="image" src="slider/img/purple.jpg" />
+                <img data-u="image" src="slider/images/purple.jpg" />
             </div>
             <div data-p="225.00" data-po="80% 55%" style="display: none;">
-                <img data-u="image" src="slider/img/blue.jpg" />
+                <img data-u="image" src="slider/images/blue.jpg" />
             </div>
         </div>
         <!-- Bullet Navigator -->
@@ -149,6 +153,11 @@
         <span data-u="arrowright" class="jssora22r" style="top:0px;right:8px;width:40px;height:58px;" data-autocenter="2"></span>
     </div>
     <script type="text/javascript">jssor_1_slider_init();</script>
+  
+  
+  
+  
+  
   
   <iframe src="https://player.vimeo.com/video/83231626?byline=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   <img src="images/kinastudio_web_info.jpg"/>
