--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
       color:#fff;
     }
     body {
+      margin:0;
+      padding:0;
       text-align:center;
     }
-    img {
+    img.img-block {
       width: 100%;
       max-width: 600px;
       min-width: 320px;
@@ -123,7 +125,7 @@
   
 <body style="background-color:#000; font-family: 'Montserrat', sans-serif;">
 
-  <img src="images/kinastudio_web_header.jpg"/>
+  <img class="img-block" src="images/kinastudio_web_header.jpg"/>
   
   
   
@@ -160,7 +162,8 @@
   
   
   <iframe src="https://player.vimeo.com/video/83231626?byline=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  <img src="images/kinastudio_web_info.jpg"/>
+  
+  <img class="img-block" src="images/kinastudio_web_info.jpg"/>
 
   <p>&copy; 2016 KINASTUDIO. Stuttgart City.</p>
   
