--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       max-width: 600px;
       min-width: 320px;
     }
+    .block-separator {
+      height:20px;
+    }
   </style>
   
   <script src="slider/js/jssor.slider-21.1.6.min.js" type="text/javascript"></script>
@@ -159,7 +162,7 @@
   
   
   
-  
+  <div class="block-separator" />
   
   <iframe src="https://player.vimeo.com/video/83231626?byline=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   
