--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       min-width: 320px;
     }
     .block-separator {
-      height:20px;
+      margin:10px;
     }
   </style>
   
@@ -162,7 +162,7 @@
   
   
   
-  <div class="block-separator" />
+  <div class="block-separator"></div>
   
   <iframe src="https://player.vimeo.com/video/83231626?byline=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   
