--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
   <img class="img-block" src="images/kinastudio_web_info.jpg"/>
 
   <p>&copy; 2016 KINASTUDIO. Stuttgart City.</p>
+  <a href="imprint.html" target="_blank">Impressum</a>
   
 </body>
 </html>
