--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
   <style>
-    p {
+    p, a {
       color:#fff;
     }
     body {
@@ -169,7 +169,7 @@
   <img class="img-block" src="images/kinastudio_web_info.jpg"/>
 
   <p>&copy; 2016 KINASTUDIO. Stuttgart City.</p>
-  <a href="imprint.html" target="_blank">Impressum</a>
+  <a class="block-separator" href="imprint.html" target="_blank">Impressum</a>
   
 </body>
 </html>
