--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
   <img class="img-block" src="images/kinastudio_web_info.jpg"/>
 
   <p>&copy; 2016 KINASTUDIO. Stuttgart City.</p>
-  <a class="block-separator" href="imprint.html" target="_blank">Impressum</a>
+  <a href="imprint.html" target="_blank">Impressum</a>
+  <div class="block-separator"></div>
   
 </body>
 </html>
