--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  </head>
-  <style>
+    <style>
     p, a {
       color:#fff;
     }
@@ -88,18 +87,6 @@
         .jssorb05 div:hover, .jssorb05 .av:hover { background-position: -37px -7px; }
         .jssorb05 .av { background-position: -67px -7px; }
         .jssorb05 .dn, .jssorb05 .dn:hover { background-position: -97px -7px; }
-        
-        /* jssor slider arrow navigator skin 22 css */
-        /*
-        .jssora22l                  (normal)
-        .jssora22r                  (normal)
-        .jssora22l:hover            (normal mouseover)
-        .jssora22r:hover            (normal mouseover)
-        .jssora22l.jssora22ldn      (mousedown)
-        .jssora22r.jssora22rdn      (mousedown)
-        .jssora22l.jssora22lds      (disabled)
-        .jssora22r.jssora22rds      (disabled)
-        */
         .jssora22l, .jssora22r {
             display: block;
             position: absolute;
@@ -119,9 +106,7 @@
         .jssora22l.jssora22lds { background-position: -10px -31px; opacity: .3; pointer-events: none; }
         .jssora22r.jssora22rds { background-position: -70px -31px; opacity: .3; pointer-events: none; }
     </style>
-
-  
-  
+  </head>
   
   
   
@@ -130,10 +115,6 @@
 
   <img class="img-block" src="images/kinastudio_web_header.jpg"/>
   
-  
-  
-  
-  
       <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden; visibility: hidden;">
         <!-- Loading Screen -->
         <div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
@@ -141,12 +122,15 @@
             <div style="position:absolute;display:block;background:url('slider/images/loading.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
         </div>
         <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden;">
-            <div data-p="225.00" style="display: none;">
-                <img data-u="image" src="slider/images/purple.jpg" />
-            </div>
-            <div data-p="225.00" data-po="80% 55%" style="display: none;">
-                <img data-u="image" src="slider/images/blue.jpg" />
-            </div>
+          <div data-p="225.00" style="display: none;">
+                <img data-u="image" src="slider/images/slides/photo1.jpg" />
+          </div>
+          <div data-p="225.00" data-po="80% 55%" style="display: none;">
+                <img data-u="image" src="slider/images/slides/photo2.jpg" />
+          </div>
+          <div data-p="225.00" data-po="80% 55%" style="display: none;">
+                <img data-u="image" src="slider/images/slides/photo3.jpg" />
+          </div>
         </div>
         <!-- Bullet Navigator -->
         <div data-u="navigator" class="jssorb05" style="bottom:16px;right:16px;" data-autocenter="1">
@@ -158,9 +142,6 @@
         <span data-u="arrowright" class="jssora22r" style="top:0px;right:8px;width:40px;height:58px;" data-autocenter="2"></span>
     </div>
     <script type="text/javascript">jssor_1_slider_init();</script>
-  
-  
-  
   
   <div class="block-separator"></div>
   
