--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
   
   <div class="block-separator"></div>
   
+  <!-- LightWidget WIDGET -->
+  <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/f6de735d56735bedb90b4b6dd4f107ec.html" id="lightwidget_f6de735d56" name="lightwidget_f6de735d56"  scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+  
   <iframe src="https://player.vimeo.com/video/83231626?byline=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   
   <img class="img-block" src="images/kinastudio_web_info.jpg"/>
