--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
   
   <div class="block-separator"></div>
   
+  <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
   
   <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/71fcba62f5165f2caebce71365829c90.html" id="lightwidget_71fcba62f5" name="lightwidget_71fcba62f5"  scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
-  
   
   <img class="img-block" src="images/kinastudio_web_info.jpg"/>
 
