--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       padding:0;
       text-align:center;
     }
+    img.header {
+      width: 100%;
+      max-width: 380px;
+      min-width: 320px;
+    }  
     img.img-block {
       width: 100%;
       max-width: 600px;
@@ -113,7 +118,7 @@
   
 <body style="background-color:#000; font-family: 'Montserrat', sans-serif;">
 
-  <img class="img-block" src="images/kinastudio_web_header.jpg"/>
+  <img class="header" src="images/kinastudio_web_header.jpg"/>
   
       <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden; visibility: hidden;">
         <!-- Loading Screen -->
