--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <style>
     p, a {
-      color:#fff;
+      color:#f0f0f0;
     }
     body {
       margin:0;
@@ -12,7 +12,7 @@
       text-align:center;
     }
     .topnav {
-      margin-top:25px;
+      margin-top:30px;
     }
     img.header {
       width: 100%;
@@ -121,7 +121,7 @@
   
 <body style="background-color:#000; font-family: 'Montserrat', sans-serif;">
 
-  <div class=".topnav">Impressum</div>
+  <div class=".topnav"><a href="imprint.html" target="_blank">Impressum</a></div>
   <img class="header" src="images/kinastudio_web_header.jpg"/>
   
       <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden; visibility: hidden;">
