--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   
 <body style="background-color:#000; font-family: 'Montserrat', sans-serif;">
 
-  <div class=".topnav"><a href="imprint.html" target="_blank">Impressum</a></div>
+  <div class=".topnav" style="color:#0a0a0a">Alles für diesen magischen Moment</div>
   <img class="header" src="images/kinastudio_web_header.jpg"/>
   
       <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden; visibility: hidden;">
@@ -154,9 +154,8 @@
   
   <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
   
-  <iframe src="http://kinastudio.pixieset.com" name="gallery" style="width:100%"/>
   
-  <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/71fcba62f5165f2caebce71365829c90.html" id="lightwidget_71fcba62f5" name="lightwidget_71fcba62f5"  scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+  
   
   <img class="img-block" src="images/kinastudio_web_info.jpg"/>
 
