--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   
 <body style="background-color:#000; font-family: 'Montserrat', sans-serif;">
 
-  <div class=".topnav" style="color:#0a0a0a">Alles für diesen magischen Moment</div>
+  <div class="topnav"></div>
   <img class="header" src="images/kinastudio_web_header.jpg"/>
   
       <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden; visibility: hidden;">
