--- a/index.html
+++ b/index.html
@@ -131,19 +131,6 @@
   <script type="text/javascript" src="gallery/lib/easing.js"></script>
   <script type="text/javascript" src="gallery/instagramElement.js"></script>
 
-
-  <script type="text/javascript">
-    $('.gallery').instagramElement({
-      mode : 'user',
-      userID : 'kina.studio',
-      accessToken : '2066076364.1677ed0.5ab10341f5d347d58704d8f01ad8a2b9',
-      galleryMode: 'classic',
-      video: true,
-      showVideoControls: false
-    });
-  </script>
-
-
   <link rel="stylesheet" href="gallery/lib/videoplayer/css/style.css" media="screen">
   <link href="gallery/lib/fancybox2/source/jquery.fancybox.css" rel="stylesheet">
   <link href="gallery/instagramElement.css" rel="stylesheet">
@@ -197,5 +184,16 @@
   <a href="imprint.html" target="_blank">Impressum</a>
   <div class="block-separator"></div>
   
+  <script type="text/javascript">
+    $('.gallery').instagramElement({
+      mode : 'user',
+      userID : '2066076364',
+      accessToken : '2066076364.1677ed0.5ab10341f5d347d58704d8f01ad8a2b9',
+      galleryMode: 'classic',
+      video: true,
+      showVideoControls: false
+    });
+  </script>
+
 </body>
 </html>
