--- a/index.html
+++ b/index.html
@@ -120,21 +120,6 @@
         .jssora22r.jssora22rds { background-position: -70px -31px; opacity: .3; pointer-events: none; }
     </style>
 
-
-
-<!-- GALLERY STUFF -->
-
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
-  <script src="gallery/lib/videoplayer/js/mediaelement-and-player.min.js"></script>
-  <script type="text/javascript" src="gallery/lib/fancybox2/source/jquery.fancybox.pack.js"></script>
-  <script type="text/javascript" src="gallery/lib/dateFormat.js"></script>
-  <script type="text/javascript" src="gallery/lib/easing.js"></script>
-  <script type="text/javascript" src="gallery/instagramElement.js"></script>
-
-  <link rel="stylesheet" href="gallery/lib/videoplayer/css/style.css" media="screen">
-  <link href="gallery/lib/fancybox2/source/jquery.fancybox.css" rel="stylesheet">
-  <link href="gallery/instagramElement.css" rel="stylesheet">
-
 </head>
   
   
@@ -176,24 +161,17 @@
   <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
   
   
-  <div class="gallery"></div>
+  <div class="links">
+    <a href="https://500px.com/kinastudio" target="_blank"><img src="images/500px.png" height="150px"/></a>
+    <br/>
+    <a href="https://www.instagram.com/kina.studio/" target="_blank"><img src="images/instagram.png" height="150px"/></a>
+  </div>
   
   <img class="img-block" src="images/kinastudio_web_info.jpg"/>
 
   <p>&copy; 2016 KINASTUDIO. Stuttgart City.</p>
   <a href="imprint.html" target="_blank">Impressum</a>
   <div class="block-separator"></div>
-  
-  <script type="text/javascript">
-    $('.gallery').instagramElement({
-      mode : 'user',
-      userID : '2066076364',
-      accessToken : '2066076364.1677ed0.5ab10341f5d347d58704d8f01ad8a2b9',
-      galleryMode: 'classic',
-      video: true,
-      showVideoControls: false
-    });
-  </script>
 
 </body>
 </html>
