--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <body style="background-color:#000; font-family: 'Montserrat', sans-serif;">
 
   <div class="topnav"></div>
-  <img class="header" src="images/kinastudio_web_header_2.jpg"/>
+  <img class="header" src="images/kinastudio_web_header_2.png"/>
   
       <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden; visibility: hidden;">
         <!-- Loading Screen -->
