--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
     }
     img.header {
       width: 100%;
-      max-width: 360px;
-      min-width: 360px;
+      max-width: 600px;
+      min-width: 600px;
+      margin-top: -100px;
+      margin-bottom: -100px;
     }  
     img.img-block {
       width: 100%;
