--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
     .block-separator {
       margin:5px;
     }
+    .white-box {
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 960px;
+    }
     .black-box {
       background-color: #000;
     }
@@ -171,6 +176,16 @@
       <script type="text/javascript">jssor_1_slider_init();</script>
   
 </div>
+
+
+
+
+
+
+
+
+
+
 <div class="black-box">
 
   <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
