--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <style>
     p, a {
-      color:#000;
+      color:#eee;
     }
     .body {
       margin:0;
