--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
     p, a {
       color:#eee;
+      font-size: medium;
     }
     .body {
       margin:0;
@@ -194,7 +195,7 @@
   
   <img class="img-block" src="images/kinastudio_web_info.jpg"/>
 
-  <p>&copy; 2016 KINASTUDIO. Stuttgart City.</p>
+  <p>&copy; 2016 KINA.studio. Stuttgart City.</p>
   <a href="imprint.html" target="_blank">Impressum</a>
   <div class="block-separator"></div>
 
