--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 
 
     <!-- CUSTOM STUFF -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <meta charset="utf-8"/>
     <style>
     p, a {
-      color:#eee;
-      font-size: medium;
+      color:#333;
+      font-family: Helvetica,sans-serif;
+      font-size: 12px;
+      line-height: 16px;
+      letter-spacing: .8px;
     }
     .body {
       margin:0;
@@ -16,7 +19,6 @@
       text-align:center;
 
       background-color:#fff; 
-      font-family: 'Montserrat', sans-serif;
     }
     .topnav {
       margin-top:30px;
@@ -25,8 +27,8 @@
       width: 100%;
       min-width: 420px;
       max-width: 640px;
-      margin-top: -100px;
-      margin-bottom: -100px;
+      margin-top: -120px;
+      margin-bottom: -120px;
     }  
     img.img-block {
       width: 100%;
@@ -36,9 +38,23 @@
     .block-separator {
       margin:5px;
     }
-    
-    .black-box {
-      background-color: #000;
+    .block1, .block2, .block3, .block-text1 {
+      max-width: 1000px;
+      margin:auto;
+      margin-bottom: 10px;
+    }
+    .block2, .block3 {
+    	background-color: #fff;
+    	border: 1px solid #ccc ;
+    }
+    .block2-inner, .block3-inner, .block-text1-inner {
+    	margin: 5px;
+    }
+    .block2-inner, .block3-inner {
+    	background-color: #000;
+    }
+    .text-block {
+    	font-size: small;
     }
   </style>
   
@@ -137,20 +153,20 @@
   
 <body class="body">
 
-<div class="white-box">
+
 
   <div class="topnav"></div>
   <img class="header" src="images/kina-studio-stuttgart.jpg"/>
   
+<div class="block1"><div class="block1-inner">
 
-
-      <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1000px; height: 600px; overflow: hidden; visibility: hidden;">
+      <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1200px; height: 500px; overflow: hidden; visibility: hidden;">
         <!-- Loading Screen -->
         <div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
             <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;"></div>
             <div style="position:absolute;display:block;background:url('slider/images/loading.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
         </div>
-        <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 1000px; height: 600px; overflow: hidden;">
+        <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 1200px; height: 500px; overflow: hidden;">
           <div data-p="225.00" style="display: none;">
                 <img data-u="image" src="slider/images/slides/photo1.jpg" />
           </div>
@@ -172,7 +188,7 @@
       </div>
       <script type="text/javascript">jssor_1_slider_init();</script>
   
-</div>
+</div></div>
 
 
 
@@ -183,7 +199,7 @@
 
 
 
-<div class="black-box">
+<div class="block2"><div class="block2-inner">
 
   <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
   
@@ -191,15 +207,26 @@
     <a href="https://500px.com/kinastudio" target="_blank"><img src="images/500px.png" height="40px"/></a>
     <br/><br/><br/>
     <a href="https://www.instagram.com/kina.studio/" target="_blank"><img src="images/instagram.png" height="50px"/></a>
+    <br/><br/><br/>
   </div>
-  
+</div></div>
+
+<div class="block-text1"><div class="block-text1-inner">
+<p>Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten, wie Sie Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver machen. Als Kunde von KINA.studio erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte, sowie Fashion und Portraitfotografie für Ihr Unternehmen. Darüber hinaus können Sie mit uns in die Welt der Produktvideos und Werbevideos einsteigen. Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer Webseite oder Online-Shop die besten Einkaufserlebnisse wahrnehmen können. Schicken Sie uns einfach eine kurze Mail und wir beraten Sie gerne in allen Fragen zum Thema Werbefotografie.</p>
+</div></div>
+
+<div class="block3"><div class="block3-inner">
+
   <img class="img-block" src="images/kinastudio_web_info.jpg"/>
+
+</div></div>
+
 
   <p>&copy; 2016 KINA.studio. Stuttgart City.</p>
   <a href="imprint.html" target="_blank">Impressum</a>
   <div class="block-separator"></div>
 
-</div>
+
 
 </body>
 </html>
