--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
     .block-separator {
       margin:5px;
     }
-    .block1, .block2, .block3, .block-text1 {
+    
+    .block {
       max-width: 1000px;
       margin:auto;
-      margin-bottom: 10px;
+      margin-bottom: 60px;
     }
+    
     .block2, .block3 {
     	background-color: #fff;
     	border: 1px solid #ccc ;
@@ -158,7 +160,7 @@
   <div class="topnav"></div>
   <img class="header" src="images/kina-studio-stuttgart.jpg"/>
   
-<div class="block1"><div class="block1-inner">
+<div class="block block1"><div class="block1-inner">
 
       <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1200px; height: 500px; overflow: hidden; visibility: hidden;">
         <!-- Loading Screen -->
@@ -199,7 +201,7 @@
 
 
 
-<div class="block2"><div class="block2-inner">
+<div class="block block2"><div class="block2-inner">
 
   <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
   
@@ -211,11 +213,11 @@
   </div>
 </div></div>
 
-<div class="block-text1"><div class="block-text1-inner">
+<div class="block block-text1"><div class="block-text1-inner">
 <p>Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten, wie Sie Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver machen. Als Kunde von KINA.studio erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte, sowie Fashion und Portraitfotografie für Ihr Unternehmen. Darüber hinaus können Sie mit uns in die Welt der Produktvideos und Werbevideos einsteigen. Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer Webseite oder Online-Shop die besten Einkaufserlebnisse wahrnehmen können. Schicken Sie uns einfach eine kurze Mail und wir beraten Sie gerne in allen Fragen zum Thema Werbefotografie.</p>
 </div></div>
 
-<div class="block3"><div class="block3-inner">
+<div class="block block3"><div class="block3-inner">
 
   <img class="img-block" src="images/kinastudio_web_info.jpg"/>
 
