--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     .block {
       max-width: 1000px;
       margin:auto;
-      margin-bottom: 60px;
+      margin-bottom: 70px;
     }
     
     .block2, .block3 {
@@ -50,7 +50,7 @@
     	border: 1px solid #ccc ;
     }
     .block2-inner, .block3-inner, .block-text1-inner {
-    	margin: 5px;
+    	margin: 8px;
     }
     .block2-inner, .block3-inner {
     	background-color: #000;
@@ -203,13 +203,15 @@
 
 <div class="block block2"><div class="block2-inner">
 
-  <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
+  <div>
+    <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
+  </div>
   
   <div class="links">
     <a href="https://500px.com/kinastudio" target="_blank"><img src="images/500px.png" height="40px"/></a>
-    <br/><br/><br/>
+    <br/><br/>
     <a href="https://www.instagram.com/kina.studio/" target="_blank"><img src="images/instagram.png" height="50px"/></a>
-    <br/><br/><br/>
+    <br/><br/>
   </div>
 </div></div>
 
