--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       margin:0;
       padding:0;
       text-align:center;
-
       background-color:#fff; 
     }
     .topnav {
@@ -38,25 +37,26 @@
     .block-separator {
       margin:5px;
     }
-    
-    .block {
-      max-width: 960px;
+
+    /* LAYOUT */
+
+    .wrapper {
+      max-width: 980px;
       margin:auto;
-      margin-bottom: 80px;
     }
-    
-    .block2, .block3 {
-    	background-color: #fff;
-    	border: 1px solid #ccc ;
+    .block {
+      margin:3px;
+      margin-bottom: 70px;
     }
-    .block2-inner, .block3-inner, .block-text1-inner {
-    	margin: 8px;
-    }
-    .block2-inner, .block3-inner {
+    .bgblack {
     	background-color: #000;
     }
-    .text-block {
-    	font-size: small;
+    .two {
+      width: 40%;
+    }
+    li {
+      display: inline; /* li nebeneinander anzeigen */
+      list-style-type: none; /* ohne Aufzählungspunkte */
     }
   </style>
   
@@ -157,10 +157,17 @@
 
 
 
+
+
   <div class="topnav"></div>
   <img class="header" src="images/kina-studio-stuttgart.jpg"/>
   
-<div class="block block1"><div class="block1-inner">
+
+
+
+<div class="wrapper">
+
+<div class="block bgblack">
 
       <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1200px; height: 500px; overflow: hidden; visibility: hidden;">
         <!-- Loading Screen -->
@@ -190,40 +197,57 @@
       </div>
       <script type="text/javascript">jssor_1_slider_init();</script>
   
-</div></div>
+</div>
 
 
 
 
 
-
-
-
-
-
-<div class="block block2"><div class="block2-inner">
+<div class="block bgblack">
 
   <div>
     <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
   </div>
   
-  <div class="links">
-    <a href="https://500px.com/kinastudio" target="_blank"><img src="images/500px.png" height="40px"/></a>
-    <br/><br/>
-    <a href="https://www.instagram.com/kina.studio/" target="_blank"><img src="images/instagram.png" height="50px"/></a>
-    <br/><br/>
-  </div>
-</div></div>
+</div>
 
-<div class="block block-text1"><div class="block-text1-inner">
+
+
+
+<!--  Oh meeen FIX IT!!!!! -->
+
+<div class="block bgblack">
+
+<br/><br/><br/>
+
+      <a href="https://500px.com/kinastudio" target="_blank"><img class="button" src="images/500px.png" height="40px"/></a>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+      <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="button" src="images/instagram.png" height="50px"/></a>
+
+<br/><br/><br/><br/>
+
+</div>
+
+
+
+
+<div class="block">
 <p>Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten, wie Sie Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver machen. Als Kunde von KINA.studio erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte, sowie Fashion und Portraitfotografie für Ihr Unternehmen. Darüber hinaus können Sie mit uns in die Welt der Produktvideos und Werbevideos einsteigen. Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer Webseite oder Online-Shop die besten Einkaufserlebnisse wahrnehmen können. Schicken Sie uns einfach eine kurze Mail und wir beraten Sie gerne in allen Fragen zum Thema Werbefotografie.</p>
-</div></div>
+</div>
 
-<div class="block block3"><div class="block3-inner">
 
+
+
+
+<div class="block bgblack">
   <img class="img-block" src="images/kinastudio_web_info.jpg"/>
+</div>
 
-</div></div>
+
+</div>
+
 
 
   <p>&copy; 2016 KINA.studio. Stuttgart City.</p>
