--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- CUSTOM STUFF -->
     <meta charset="utf-8"/>
     <style>
-    p, a {
+    p, a, h1, h2, h3 {
       color:#333;
       font-family: Helvetica,sans-serif;
       font-size: 12px;
@@ -47,6 +47,9 @@
     .block {
       margin:3px;
       margin-bottom: 70px;
+    }
+    .white {
+      color: white;
     }
     .bgblack {
     	background-color: #000;
@@ -208,15 +211,10 @@
   <div>
     <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
   </div>
-  
-</div>
-
 
 
 
 <!--  Oh meeen FIX IT!!!!! -->
-
-<div class="block bgblack">
 
 <br/><br/><br/>
 
@@ -227,8 +225,9 @@
       <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="button" src="images/instagram.png" height="50px"/></a>
 
 <br/><br/><br/><br/>
-
+  
 </div>
+
 
 
 
