--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
 
 <!--  Oh meeen FIX IT!!!!! -->
 
-<br/><br/><br/>
+<br/><br/>
 
       <a href="https://500px.com/kinastudio" target="_blank"><img class="button" src="images/500px.png" height="40px"/></a>
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
       <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="button" src="images/instagram.png" height="50px"/></a>
 
