--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
       max-width: 1200px;
       margin:auto;
     }
+      .block960 {
+        max-width: 960px;
+      }
     .block {
       margin:3px;
       margin-bottom: 70px;
@@ -232,7 +235,7 @@
 
 
 
-<div class="block">
+<div class="block block960">
 <p>Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten, wie Sie Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver machen. Als Kunde von KINA.studio erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte, sowie Fashion und Portraitfotografie für Ihr Unternehmen. Darüber hinaus können Sie mit uns in die Welt der Produktvideos und Werbevideos einsteigen. Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer Webseite oder Online-Shop die besten Einkaufserlebnisse wahrnehmen können. Schicken Sie uns einfach eine kurze Mail und wir beraten Sie gerne in allen Fragen zum Thema Werbefotografie.</p>
 </div>
 
