--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     }
     img.header {
       width: 100%;
-      min-width: 420px;
-      max-width: 640px;
-      margin-top: -120px;
-      margin-bottom: -120px;
+      min-width: 180px;
+      max-width: 280px;
+      margin-top: 10px;
+      margin-bottom: 10px;
     }  
     img.img-block {
       width: 100%;
@@ -167,7 +167,7 @@
 
 
   <div class="topnav"></div>
-  <img class="header" src="images/kina-studio-stuttgart.jpg"/>
+  <img class="header" src="images/kina-studio-stuttgart.png"/>
   
 
 
