--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-
-
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600" rel="stylesheet"> 
+    
     <!-- CUSTOM STUFF -->
     <meta charset="utf-8"/>
     <style>
-    p, a, h1, h2, h3 {
-      color:#333;
+    p, a {
+      color:#000;
       font-family: Helvetica,sans-serif;
       font-size: 12px;
       line-height: 16px;
       letter-spacing: .8px;
     }
+      h2, h3 {
+        font-family: 'Josefin Sans', sans-serif;
+        line-height: 16px;
+        letter-spacing: .8px;
+      }
     .body {
       margin:0;
       padding:0;
