--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     }
       h2, h3 {
         font-family: 'Josefin Sans', sans-serif;
-        line-height: 16px;
-        letter-spacing: .8px;
+        letter-spacing: 20px;
       }
     .body {
       margin:0;
