--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     .topnav {
       margin-top:30px;
     }
+    .subnav {
+      border-bottom: 1px solid #dbdbdb;
+    }
     img.header {
       width: 100%;
       min-width: 280px;
@@ -171,8 +174,7 @@
 
   <div class="topnav"></div>
   <img class="header" src="images/kina-studio-stuttgart.png"/>
-  
-
+  <div class="subnav"></div>
 
 
 <div class="wrapper">
