--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       line-height: 16px;
       letter-spacing: .8px;
     }
-      h2, h3 {
+      h2, h3, h4 {
         font-family: 'Josefin Sans', sans-serif;
         letter-spacing: 20px;
       }
@@ -174,7 +174,7 @@
 
   <div class="topnav"></div>
   <img class="header" src="images/kina-studio-stuttgart.png"/>
-  <div class="subnav"></div>
+  <div class="subnav"><h4>Find your inspiration</h4></div>
 
 
 <div class="wrapper">
