--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       margin-top:30px;
     }
     .subnav {
-      border-bottom: 1px solid #dbdbdb;
+      border-top: 1px solid #dbdbdb;
     }
     img.header {
       width: 100%;
