--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
 </div>
 
-
+<div class="subnav"></div>
 
   <p>&copy; 2016 KINA.studio. Stuttgart City.</p>
   <a href="imprint.html" target="_blank">Impressum</a>
