--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       h2, h3, h4 {
         font-family: 'Josefin Sans', sans-serif;
         letter-spacing: 20px;
+        margin: 8px;
       }
     .body {
       margin:0;
@@ -56,7 +57,7 @@
       }
     .block {
       margin:3px;
-      margin-bottom: 70px;
+      margin-bottom: 50px;
     }
     .white {
       color: white;
