--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
   <div class="topnav"></div>
   <img class="header" src="images/kina-studio-stuttgart.png"/>
-  <div class="subnav"><h3>Find your inspiration</h3></div>
+  <div class="subnav"><h3 class="widetext">Find your inspiration</h3></div>
 
 
 <div class="wrapper">
@@ -237,7 +237,7 @@
 
 
   <div class="block headline">
-    <h2>PHOTOGRAPHY & FILM</h2>
+    <h2 class="widetext">PHOTOGRAPHY & FILM</h2>
   </div>
 
 <div class="block bgblack">
