--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       h2, h3, h4 {
         font-family: 'Josefin Sans', sans-serif;
       }
-      widetext {
+      .widetext {
         letter-spacing: 20px;
         margin: 10px;
       }
