--- a/index.html
+++ b/index.html
@@ -190,7 +190,14 @@
   
 <body class="body">
 
-
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v2.8&appId=214402661917009";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
 
 
@@ -239,6 +246,10 @@
     <h2 class="widetext">PHOTOGRAPHY & FILM</h2>
   </div>
 
+  <div class="block">
+    <div class="fb-page" data-href="https://www.facebook.com/KINAstudio-1611943032444429/" data-tabs="photos" data-width="100%" data-height="200px" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KINAstudio-1611943032444429/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KINAstudio-1611943032444429/">KINA.studio</a></blockquote></div>
+  </div>
+  
 <div class="block bgblack">
 
   <div>
