--- a/index.html
+++ b/index.html
@@ -190,15 +190,6 @@
   
 <body class="body">
 
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v2.8&appId=214402661917009";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-
 
 
   <div class="topnav"></div>
@@ -247,8 +238,7 @@
   </div>
 
   <div class="block">
-    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FKINAstudio-1611943032444429%2F&tabs=photos&width=100%25&height=200px&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=true&appId=198723013485212" width="100%" height="200px" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-    <div class="fb-page" data-href="https://www.facebook.com/KINAstudio-1611943032444429/" data-tabs="photos" data-width="100%" data-height="200px" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KINAstudio-1611943032444429/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KINAstudio-1611943032444429/">KINA.studio</a></blockquote></div>
+    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FKINAstudio-1611943032444429%2F&tabs=photos&width=800&height=200px&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=true&appId=214402661917009" width="800" height="200px" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
   </div>
   
 <div class="block bgblack">
