--- a/index.html
+++ b/index.html
@@ -259,6 +259,10 @@
   <div>
     <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
   </div>
+  
+  <div class="fb-page" data-href="https://www.facebook.com/KINAstudio-1611943032444429/" data-tabs="timeline" data-width="500" data-height="400" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KINAstudio-1611943032444429/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KINAstudio-1611943032444429/">KINA.studio</a></blockquote></div>
+    
+  
   <a href="https://500px.com/kinastudio" target="_blank"><img class="button" src="images/500px.png" height="200px"/></a>
   <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="button" src="images/instagram.png" height="200px"/></a>
 </div>
