--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
             font-family: 'Josefin Sans', sans-serif;
         }
 
+        h2 { font-size: 20px; }
+        h3 { font-size: 16px; }
+        h4 { font-size: 14px; }
+
         .widetext {
-            letter-spacing: 20px;
-            margin: 10px;
+            letter-spacing: 16px;
+            margin: 8px;
         }
 
         .headline {
@@ -213,7 +217,7 @@
 
 <div class="topnav"></div>
 <img class="header" src="images/kina-studio-stuttgart.png"/>
-<div class="subnav"><h3 class="widetext">Find your inspiration</h3></div>
+<div class="subnav"><h3 class="widetext">find your inspiration</h3></div>
 <div class="wrapper">
     <div class="block bgblack">
         <script type="text/javascript">
