--- a/index.html
+++ b/index.html
@@ -316,6 +316,53 @@
         <h2 class="widetext">PHOTOGRAPHY & FILM</h2>
     </div>
 
+
+    <!-- INSTAGRAM -->
+    <div class="block">
+        <div class="instagram"></div>
+    </div>
+    <script>
+        $('.instagram').instagramElement({
+            mode : 'user',
+            userID : '2066076364',
+            accessToken : '2066076364.1677ed0.5ab10341f5d347d58704d8f01ad8a2b9',
+            galleryMode: 'classic',
+            video: true,
+            showVideoControls: false
+        });
+    </script>
+
+
+    <div class="block bgblack">
+        <div>
+            <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
+        </div>
+
+        <div class="block">
+            <div class="fb-page" data-href="https://www.facebook.com/KINAstudio-1611943032444429/" data-tabs="timeline"
+                 data-width="500" data-height="400" data-small-header="true" data-adapt-container-width="true"
+                 data-hide-cover="false" data-show-facepile="true">
+                <blockquote cite="https://www.facebook.com/KINAstudio-1611943032444429/" class="fb-xfbml-parse-ignore">
+                    <a href="https://www.facebook.com/KINAstudio-1611943032444429/">KINA.studio</a></blockquote>
+            </div>
+        </div>
+
+        <a href="https://500px.com/kinastudio" target="_blank"><img class="button" src="images/500px.png"
+                                                                    height="200px"/></a>
+        <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="button" src="images/instagram.png"
+                                                                              height="200px"/></a>
+    </div>
+
+
+    <div class="block">
+        <p style="margin: 5px; text-align: justify;">Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten,
+            Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver zu machen. Erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte oder schöne Portraits für Ihre Mitarbeiter. Darüber hinaus können Sie mit uns in die Welt der Produkt- und
+            Werbevideos einsteigen. Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer
+            Webseite oder Online-Shop die besten Einkaufserlebnisse wahrnehmen können. Schicken Sie uns einfach eine
+            kurze Mail und wir beraten Sie gerne in allen Fragen zum Thema Fotografie.</p>
+    </div>
+
+
     <div class="block">
         <script type="text/javascript">
             jssor_2_slider_init = function () {
@@ -399,56 +446,6 @@
                   data-autocenter="2"></span>
         </div>
         <script type="text/javascript">jssor_2_slider_init();</script>
-
-
-    </div>
-
-
-    <!-- INSTAGRAM -->
-    <div class="block">
-        <div class="instagram"></div>
-    </div>
-    <script>
-        $('.instagram').instagramElement({
-            mode : 'user',
-            userID : '2066076364',
-            accessToken : '2066076364.1677ed0.5ab10341f5d347d58704d8f01ad8a2b9',
-            galleryMode: 'classic',
-            video: true,
-            showVideoControls: false
-        });
-    </script>
-
-
-    <div class="block bgblack">
-        <div>
-            <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
-        </div>
-
-        <div class="block">
-            <div class="fb-page" data-href="https://www.facebook.com/KINAstudio-1611943032444429/" data-tabs="timeline"
-                 data-width="500" data-height="400" data-small-header="true" data-adapt-container-width="true"
-                 data-hide-cover="false" data-show-facepile="true">
-                <blockquote cite="https://www.facebook.com/KINAstudio-1611943032444429/" class="fb-xfbml-parse-ignore">
-                    <a href="https://www.facebook.com/KINAstudio-1611943032444429/">KINA.studio</a></blockquote>
-            </div>
-        </div>
-
-        <a href="https://500px.com/kinastudio" target="_blank"><img class="button" src="images/500px.png"
-                                                                    height="200px"/></a>
-        <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="button" src="images/instagram.png"
-                                                                              height="200px"/></a>
-    </div>
-
-
-    <div class="block">
-        <p style="margin: 5px; text-align: justify;">Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten,
-            wie Sie Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver machen. Als
-            Kunde von KINA.studio erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte, sowie Fashion und
-            Portraitfotografie für Ihr Unternehmen. Darüber hinaus können Sie mit uns in die Welt der Produktvideos und
-            Werbevideos einsteigen. Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer
-            Webseite oder Online-Shop die besten Einkaufserlebnisse wahrnehmen können. Schicken Sie uns einfach eine
-            kurze Mail und wir beraten Sie gerne in allen Fragen zum Thema Werbefotografie.</p>
     </div>
 
 
